lib/GSL/Special/trig.h

int gsl_sf_sin_e(double x,double* result);
double gsl_sf_sin(double x);
int gsl_sf_cos_e(double x,double* result);
double gsl_sf_cos(double x);
int gsl_sf_hypot_e(double x,double y,double* result);
double gsl_sf_hypot(double x,double y);
int gsl_sf_complex_sin_e(double zr,double zi,double* szr,double* szi);
int gsl_sf_complex_cos_e(double zr,double zi,double* czr,double* czi);
int gsl_sf_complex_logsin_e(double zr,double zi,double* lszr,double* lszi);
int gsl_sf_sinc_e(double x,double* result);
double gsl_sf_sinc(double x);
int gsl_sf_lnsinh_e(double x,double* result);
double gsl_sf_lnsinh(double x);
int gsl_sf_lncosh_e(double x,double* result);
double gsl_sf_lncosh(double x);
int gsl_sf_polar_to_rect(double r,double theta,double* x,double* y);
int gsl_sf_rect_to_polar(double x,double y,double* r,double* theta);
int gsl_sf_sin_err_e(double x,double dx,double* result);
int gsl_sf_cos_err_e(double x,double dx,double* result);
int gsl_sf_angle_restrict_symm_e(double* theta);
double gsl_sf_angle_restrict_symm(double theta);
int gsl_sf_angle_restrict_pos_e(double* theta);
double gsl_sf_angle_restrict_pos(double theta);
int gsl_sf_angle_restrict_symm_err_e(double theta,double* result);
int gsl_sf_angle_restrict_pos_err_e(double theta,double* result);